--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </li>
       </ul>
 
-      <div id="autoclicker" class="hd">
+      <div id="autoclicker" class="animated-element">
         <h1>Okral Autoclicker 1.0</h1>
         <a
           href="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Okral%201.0.zip?v=1679754853571"
@@ -97,7 +97,7 @@
         <p>Only works for windows</p>
       </div>
 
-      <div id="spammer" class="hd">
+      <div id="spammer" class="animated-element">
         <h1>Okral Spammer</h1>
         <a href="https://github.com/Okerew/Py-OS">Download</a>
         <br />
@@ -106,7 +106,7 @@
         />
         <p>Only wowrks for windows</p>
       </div>
-      <div class="hd" id="pyos">
+      <div id="pyos" class="animated-element">
         <h1>PyOs</h1>
         <h2 class="sr3">System created by Okerew</h2>
         <img
@@ -129,13 +129,13 @@
           If you want with a graphical interphace download the graphical branch
         </p>
       </div>
-      <div class="hd" id="dptech">
+      <div id="dptech" class="animated-element">
         <h1>dpTECH first edition</h1>
         <h2>A minecraft modack created by me for 1.12.2</h2>
         <a href="https://dptech.glitch.me/">Website</a>
       </div>
 
-      <div class="hd" id="ltsm">
+      <div id="ltsm" class="animated-element">
         <h1>Okral Stock Algorithm</h1>
         <img
           src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Screenshot%202024-02-13%20at%2022.38.37.png?v=1707860336162"
@@ -157,12 +157,12 @@
           >Download</a
         >
       </div>
-      <div id="ok_l" class="hd">
+      <div id="ok_l" class="animated-element">
         <h1>Okerew Language</h1>
         <p>A interpreted coding language created by me in python</p>
         <a href="https://github.com/Okerew/okerew_language">Github</a>
       </div>
-      <div id="oce" class="hd">
+      <div id="oce" class="animated-element">
         <h1>Okral Code editor</h1>
         <br />
         <iframe
