❤️📽️ Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
           </button>
         </li>
         <li>
+          <button onclick="okrol()">
+            <h2>
+              Okrol
+            </h2>
+          </button>
+        </li>
+        <li>
           <a href="https://www.planetminecraft.com/member/okerew/"
             >Texturepacks</a
           >
@@ -104,7 +111,7 @@
         <img
           src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Zrzut%20ekranu%202023-07-16%20112221.png?v=1689499365860"
         />
-        <p>Only wowrks for windows</p>
+        <p>Only works for windows</p>
       </div>
       <div id="pyos" class="animated-element">
         <h1>PyOs</h1>
@@ -175,14 +182,22 @@
         <br />
         <a href="https://okraleditor.glitch.me">Website</a>
       </div>
-      <h1>Applies to all the files</h1>
-      <p>Remember to extract the files from the zips</p>
+      <div id="okrol" class="animated-element">
+        <h1>
+          Okrol
+        </h1>
+        <p>
+          A model creating by me for checking strings and predicting things
+        </p>
+        <br>
+        <img src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Screenshot%202024-05-02%20at%2008.25.35.png?v=1714631390910">
+        <a src="https://github.com/Okerew/okrol/blob/main/README.md">Download</a>
+      </div>
       <p>These scripts are for educational purposes only</p>
       <p>
         Contact me, <a href="mailto:okerewgroup@proton.me">email</a>,
-        <a href="https://discord.com/users/1130105085918191706">Discord</a>
+        <a href="https://discord.com/users/1130105085918191706">discord</a>
       </p>
     </div>
-
   </body>
 </html>
