🤍🍥 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -191,9 +191,10 @@
         </p>
         <br>
         <img src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Screenshot%202024-05-02%20at%2008.25.35.png?v=1714631390910">
-        <a src="https://github.com/Okerew/okrol/blob/main/README.md">Download</a>
+        <br>
+        <a href="https://github.com/Okerew/okrol/">Download</a>
       </div>
-      <p>These scripts are for educational purposes only</p>
+      <p>These programms are for educational purposes only</p>
       <p>
         Contact me, <a href="mailto:okerewgroup@proton.me">email</a>,
         <a href="https://discord.com/users/1130105085918191706">discord</a>
