--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@
         <br>
         <img src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Screenshot%202024-05-02%20at%2008.25.35.png?v=1714631390910">
         <br>
+        <a href="https://drive.proton.me/urls/DRN115C9EW#uytF4erKChWv">Download for Macos</a>
+        <br>
+        <a href="https://github.com/Okerew/okraleditor">Build for other platforms</a>
       </div>
       <p>These programms are for educational purposes only</p>
       <p>
