🗃️🦞 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
           </button>
         </li>
         <li>
+        <button onclick="okterminal()">
+          <h2>
+            Okral&nbsp;terminal
+          </h2>
+          </button>
+        </li>
+        <li>
           <a href="https://www.planetminecraft.com/member/okerew/"
             >Texturepacks</a
           >
@@ -187,7 +194,7 @@
         <br />
         <a href="https://okraleditor.glitch.me">Website</a>
         <br>
-        <a href="https://drive.proton.me/urls/DRN115C9EW#uytF4erKChWv">Download for MacOS</a>
+        <a href="https://drive.proton.me/urls/AE502W6AGM#0JAdpLP8N0Kz">Download for MacOS</a>
         <br>
         <a href="https://github.com/Okerew/okraleditor">Build for other platforms</a>
       </div>
@@ -202,6 +209,14 @@
         <img src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Screenshot%202024-05-02%20at%2008.25.35.png?v=1714631390910">
         <br>
         <a href="https://github.com/Okerew/okrol/">Download</a>
+      </div>
+      <div class="animated-element" id="okterminal">
+        <h1>
+          Okral Terminal
+        </h1>
+        <img src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Screenshot%202024-05-04%20at%2011.03.27.png?v=1714813658796">
+        <br>
+        <a href="https://github.com/Okerew/Okralterminal.git">Download</a>
       </div>
       <p>These programms are for educational purposes only</p>
       <p>
