👏🍋 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     <link rel="stylesheet" href="/style.css" />
 
     <script src="/script.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js" defer></script>
   </head>
   <body id="body">
     <div id="content">
@@ -149,8 +148,8 @@
         </p>
       </div>
       <div id="dptech" class="animated-element">
-        <h1>dpTECH first edition</h1>
-        <h2>A minecraft modack created by me for 1.12.2</h2>
+        <h1>dpTECH</h1>
+        <h2>A minecraft modack created by me for 1.12.2/1.20.1</h2>
         <a href="https://dptech.glitch.me/">Website</a>
       </div>
 
@@ -194,7 +193,7 @@
         <br />
         <a href="https://okraleditor.glitch.me">Website</a>
         <br>
-        <a href="https://drive.proton.me/urls/AE502W6AGM#0JAdpLP8N0Kz">Download for MacOS</a>
+        <a href="https://drive.proton.me/urls/RFVFWDCXY8#nJU2tbfi27BQ">Download for MacOS</a>
         <br>
         <a href="https://github.com/Okerew/okraleditor">Build for other platforms</a>
       </div>
@@ -209,6 +208,13 @@
         <img src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Screenshot%202024-05-02%20at%2008.25.35.png?v=1714631390910">
         <br>
         <a href="https://github.com/Okerew/okrol/">Download</a>
+        <br>
+        <h1>
+          Okrol Chatbot
+        </h1>
+        <img src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Screenshot%202024-05-13%20at%2020.15.57.png?v=1715625558964">
+        <br>
+        <a href="https://github.com/Okerew/Okrol-Chatbot/tree/main">Download</a>
       </div>
       <div class="animated-element" id="okterminal">
         <h1>
