--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <br />
         <a href="https://okraleditor.glitch.me">Website</a>
         <br>
-        <a href="https://drive.proton.me/urls/RFVFWDCXY8#nJU2tbfi27BQ">Download for MacOS</a>
+        <a href="https://drive.proton.me/urls/RFVFWDCXY8#nJU2tbfi27BQ">Download for MacOS or Linux</a>
         <br>
         <a href="https://github.com/Okerew/okraleditor">Build for other platforms</a>
       </div>
@@ -208,13 +208,20 @@
         <img src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Screenshot%202024-05-02%20at%2008.25.35.png?v=1714631390910">
         <br>
         <a href="https://github.com/Okerew/okrol/">Download</a>
-        <br>
+        <br><br>
         <h1>
-          Okrol Chatbot
+          Other models
         </h1>
-        <img src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Screenshot%202024-05-13%20at%2020.15.57.png?v=1715625558964">
-        <br>
+        <hr>
+        <h2>
+          Okrol Chatbot
+        </h2>
         <a href="https://github.com/Okerew/Okrol-Chatbot/tree/main">Download</a>
+        <br>
+        <h2>
+          Okrol Image Model
+        </h2>
+        <a href="https://github.com/Okerew/okral-image-model">Download</a>
       </div>
       <div class="animated-element" id="okterminal">
         <h1>
@@ -225,6 +232,9 @@
         <a href="https://github.com/Okerew/Okralterminal.git">Download</a>
       </div>
       <p>These programms are for educational purposes only</p>
+      <p>
+        Some of them fall under okral license and some under mit license
+      </p>
       <p>
         Contact me, <a href="mailto:okerewgroup@proton.me">email</a>,
         <a href="https://discord.com/users/1130105085918191706">discord</a>
