--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
           </button>
         </li>
         <li>
+          <button onclick="oklearn()">
+             <h2>
+          Okrolearn
+          </h2>
+          </button>
+        </li>
+        <li>
           <a href="https://www.planetminecraft.com/member/okerew/"
             >Texturepacks</a
           >
@@ -202,7 +209,7 @@
         ></iframe>
         <br />
         <a href="https://drive.proton.me/urls/RFVFWDCXY8#nJU2tbfi27BQ"
-          >Download for MacOS, Linux or Windows</a
+          >Download for MacOS, Linux, Windows or Android</a
         >
         <br />
         <a href="https://github.com/Okerew/okraleditor"
@@ -242,6 +249,17 @@
         <img src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Screenshot%202024-06-15%20at%2010.12.47.png?v=1718439180260">
         <br>
         <a href="https://github.com/Okerew/okral-blockchain-creator/tree/main">Download</a>
+      </div>
+      <div id="oklearn" class="animated-element">
+        <h1>
+          Oklearn
+        </h1>
+        <p>
+          A machine learning library created by me
+        </p>
+        <img src="https://github.com/Okerew/okrolearn/assets/93822247/2c3e95ea-394d-4e29-8b97-13281ee695b7">
+        <br>
+        <a href="https://github.com/Okerew/okrolearn/tree/main">Github</a>
       </div>
       <p>These programms are for educational purposes only</p>
       <p>Some of them fall under okral license and some under mit license</p>
