--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="icon"
-      href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGrwWHjd7G9DLOgqyd_Y4SkZmPcnMZqmP-k8gZpmh5RmEDHbdN7-obihppkP0CSpdcndw&usqp=CAU"
+      href="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/okerewgroup.jpg?v=1720612596250"
     />
     <title>Okral</title>
 
@@ -18,7 +18,7 @@
     <meta property="og:description" content="Okerew scripts" />
     <meta
       property="og:image"
-      content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGrwWHjd7G9DLOgqyd_Y4SkZmPcnMZqmP-k8gZpmh5RmEDHbdN7-obihppkP0CSpdcndw&usqp=CAU"
+      content="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/okerewgroup.jpg?v=1720612596250"
     />
     <meta name="twitter:card" content="summary" />
 
@@ -246,7 +246,6 @@
         <h1>
           Okral Blockchain Creator
         </h1>
-        <img src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Screenshot%202024-06-15%20at%2010.12.47.png?v=1718439180260">
         <br>
         <a href="https://github.com/Okerew/okral-blockchain-creator/tree/main">Download</a>
       </div>
