--- a/index.html
+++ b/index.html
@@ -96,15 +96,19 @@
           </button>
         </li>
         <li>
+          <button onclick="biobridge()">
+            <h2>
+              Biobridge
+            </h2>
+          </button>
+        </li>
+        <li>
           <a href="https://www.planetminecraft.com/member/okerew/"
             >Texturepacks</a
           >
         </li>
-        <li>
-          <a href="https://github.com/Okerew/okral-license/blob/main/LICENSE"
-            >Okral&nbsp;License</a
-          >
-        </li>
+        <li><a href="https://github.com/Okerew/Neural-Web">Neural&nbsp;Web</a></li>
+        <li><a href="https://github.com/Okerew">Github</a></li>
       </ul>
 
       <div id="autoclicker" class="animated-element">
@@ -260,24 +264,47 @@
         <h1>
           Oklearn
         </h1>
+        <a href="https://fazier.com/launches/okrolearn" target="_blank" rel="noopener noreferrer"><img src="https://fazier.com/api/v1/public/badges/embed_image.svg?launch_id=681&badge_type=daily" width="270" alt="Example Image" class="d-inline-block mt-3 p-3 rounded img-fluid" /></a>
         <p>
           A machine learning library created by me
         </p>
         <img src="https://github.com/Okerew/okrolearn/assets/93822247/2c3e95ea-394d-4e29-8b97-13281ee695b7">
         <br>
         <a href="https://github.com/Okerew/okrolearn/tree/main">Github</a>
+        <br>
       </div>
       <div class="animated-element" id="osxiec">
+        <h1>
+          Osxiec
+        </h1>
+        
         <img src="https://github.com/user-attachments/assets/d45e77d8-9532-482f-b4f6-874a301f4916" witdh="500px" height="500px">
         <br>
+      
         <p>
           OSXIEC is a native Docker-like solution for macOS developed by Okerew. It leverages native macOS features to provide containerization capabilities, albeit with some limitations compared to Docker.
         </p>
         <br>
+         <a href="https://fazier.com/launches/osxiec" target="_blank" rel="noopener noreferrer"><img src="https://fazier.com/api/v1/public/badges/embed_image.svg?launch_id=680&badge_type=daily" width="270" alt="Example Image" class="d-inline-block mt-3 p-3 rounded img-fluid" /></a>
+       <br>
         <a href="https://github.com/Okerew/osxiec"> Github</a>
+
+      </div>
+      <div class="animated-element" id="biobridge">
+        <h1>
+          Biobridge
+        </h1>
+        <img src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/b54e8cf8-ba46-48b4-9f45-cc718b257f0e.image.png?v=1739306048194" width="500px" height="500px">
+        <p>
+          Biobridge is a Python library for simulating biological processes and systems also analyzing them, visualising them, and interacting with them.
+        </p>
+        <p>
+          To install do pip install biobridge
+        </p>
+        <a href="https://github.com/Okerew/biobridge">Github</a>
       </div>
       <p>These programms are for educational purposes only</p>
-      <p>Some of them fall under okral license and some under mit license</p>
+      <p>Some of them fall under <a href="https://github.com/Okerew/okral-license/blob/main/LICENSE">okral license</a> and some under mit license</p>
       <p>
         Contact me, <a href="mailto:okerewgroup@proton.me">email</a>,
         <a href="https://discord.com/users/1130105085918191706">discord</a>
