--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     />
     <meta name="twitter:card" content="summary" />
 
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
 
-    <script src="/script.js" defer></script>
+    <script src="script.js" defer></script>
   </head>
   <body id="body">
     <div id="content">
@@ -37,18 +37,13 @@
           </button>
         </li>
         <li>
-          <button onclick="spammer()">
-            <h2>Spammer</h2>
-          </button>
-        </li>
-        <li>
           <button onclick="pyos()">
             <h2>PyOS</h2>
           </button>
         </li>
         <li>
           <button onclick="dptech()">
-            <h2>dpTECH</h2>
+            <h2>MC&nbsp;Modpacks</h2>
           </button>
         </li>
         <li>
@@ -57,56 +52,28 @@
           </button>
         </li>
         <li>
-          <button onclick="ok_l()">
-            <h2>Okerew&nbsp;Language</h2>
-          </button>
-        </li>
-        <li>
           <button onclick="oce()">
             <h2>Okral&nbsp;code&nbsp;editor</h2>
           </button>
         </li>
         <li>
-          <button onclick="okrol()">
-            <h2>Okrol</h2>
-          </button>
-        </li>
-        <li>
-          <button onclick="okterminal()">
-            <h2>Okral&nbsp;terminal</h2>
-          </button>
-        </li>
-        <li>
-          <button onclick="ok_blockchain()">
-            <h2>Okral&nbsp;Blockchain&nbsp;Creator</h2>
-          </button>
-        </li>
-        <li>
           <button onclick="oklearn()">
-             <h2>
-          Okrolearn
-          </h2>
+            <h2>Okrolearn</h2>
           </button>
         </li>
         <li>
           <button onclick="osxiec()">
-            <h2>
-              Osxiec
-            </h2>
+            <h2>Osxiec</h2>
           </button>
         </li>
         <li>
           <button onclick="biobridge()">
-            <h2>
-              Biobridge
-            </h2>
+            <h2>Biobridge</h2>
           </button>
         </li>
         <li>
-        <button onclick="depramanager()">
-          <h2>
-            Depramanager
-          </h2>
+          <button onclick="depramanager()">
+            <h2>Depramanager</h2>
           </button>
         </li>
         <li>
@@ -114,14 +81,17 @@
             >Texturepacks</a
           >
         </li>
-        <li><a href="https://github.com/Okerew/Neural-Web">Neural&nbsp;Web</a></li>
+        <li>
+          <a href="https://github.com/Okerew/Neural-Web">Neural&nbsp;Web</a>
+        </li>
         <li><a href="https://github.com/Okerew">Github</a></li>
+        <lli><a href="index2.html">Osxiec&nbsp;Hub</a></lli>
       </ul>
 
       <div id="autoclicker" class="animated-element">
         <h1>Okral Autoclicker 1.0</h1>
         <a
-          href="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Okral%201.0.zip?v=1679754853571"
+          href="autoclicker.png"
           >Click to Dowloand</a
         >
         <br />
@@ -141,29 +111,11 @@
         <p>Only works for windows</p>
       </div>
 
-      <div id="spammer" class="animated-element">
-        <h1>Okral Spammer v3</h1>
-        <a
-          href="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Okral%20Spammer.zip?v=1695401146636"
-          >Download</a
-        >
-        <br />
-        <img
-          src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Zrzut%20ekranu%202023-07-16%20112221.png?v=1689499365860"
-        />
-        <p>Only works for windows</p>
-        <br />
-        <h1>Okral nuker</h1>
-        <a
-          href="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/okralnuker.zip?v=1714762181191"
-          >Download</a
-        >
-      </div>
       <div id="pyos" class="animated-element">
         <h1>PyOs</h1>
         <h2 class="sr3">System created by Okerew</h2>
         <img
-          src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/e9e4b0b3-1cab-4ccc-b0f0-6fa967fb7177.image.png?v=1699640819537"
+          src="pyos.png"
         />
         <br />
         <p>Please read README.md</p>
@@ -185,13 +137,13 @@
       <div id="dptech" class="animated-element">
         <h1>dpTECH</h1>
         <h2>A minecraft modack created by me for 1.12.2/1.20.1</h2>
-        <a href="https://dptech.glitch.me/">Website</a>
+        <a href="dptech.html">Website</a>
       </div>
 
       <div id="ltsm" class="animated-element">
         <h1>Okral Stock Algorithm</h1>
         <img
-          src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Screenshot%202024-02-13%20at%2022.38.37.png?v=1707860336162"
+          src="stock.png"
         />
         <h2>
           Contains a
@@ -210,18 +162,13 @@
           >Download</a
         >
       </div>
-      <div id="ok_l" class="animated-element">
-        <h1>Okerew Language</h1>
-        <p>A interpreted coding language created by me in python</p>
-        <a href="https://github.com/Okerew/okerew_language">Github</a>
-      </div>
       <div id="oce" class="animated-element">
         <h1>Okral Code editor</h1>
         <br />
         <iframe
           width="1400"
           height="700"
-          src="https://okraleditor.glitch.me"
+          src="okral_editor.html"
           allowfullscreen
           frameborder="0"
         ></iframe>
@@ -230,98 +177,94 @@
           >Download for MacOS, Linux, Windows or Android</a
         >
         <br />
-        <a href="https://github.com/Okerew/okraleditor"
-          >Build</a
-        >
-      </div>
-      <div id="okrol" class="animated-element">
-        <h1>Okrol</h1>
-        <p>A model creating by me for checking strings and predicting things</p>
+        <a href="https://github.com/Okerew/okraleditor">Build</a>
         <br />
-        <img
-          src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Screenshot%202024-05-02%20at%2008.25.35.png?v=1714631390910"
-        />
-        <br />
-        <a href="https://github.com/Okerew/okrol/">Download</a>
-        <br /><br />
-        <h1>Other models</h1>
-        <hr />
-        <h2>Okrol Chatbot</h2>
-        <a href="https://github.com/Okerew/Okrol-Chatbot/tree/main">Download</a>
-        <br />
-        <h2>Okrol Image Model</h2>
-        <a href="https://github.com/Okerew/okral-image-model">Download</a>
-      </div>
-      <div class="animated-element" id="okterminal">
-        <h1>Okral Terminal</h1>
-        <img
-          src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Screenshot%202024-05-04%20at%2011.03.27.png?v=1714813658796"
-        />
-        <br />
-        <a href="https://github.com/Okerew/Okralterminal.git">Download</a>
-      </div>
-      <div id="okblockchain" class="animated-element">
-        <h1>
-          Okral Blockchain Creator
-        </h1>
-        <br>
-        <a href="https://github.com/Okerew/okral-blockchain-creator/tree/main">Download</a>
+        <a href="okral_editor.html">Online website editor</a>
       </div>
       <div id="oklearn" class="animated-element">
-        <h1>
-          Oklearn
-        </h1>
-        <a href="https://fazier.com/launches/okrolearn" target="_blank" rel="noopener noreferrer"><img src="https://fazier.com/api/v1/public/badges/embed_image.svg?launch_id=681&badge_type=daily" width="270" alt="Example Image" class="d-inline-block mt-3 p-3 rounded img-fluid" /></a>
-        <p>
-          A machine learning library created by me
-        </p>
-        <img src="https://github.com/Okerew/okrolearn/assets/93822247/2c3e95ea-394d-4e29-8b97-13281ee695b7">
-        <br>
+        <h1>Oklearn</h1>
+        <a
+          href="https://fazier.com/launches/okrolearn"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><img
+            src="https://fazier.com/api/v1/public/badges/embed_image.svg?launch_id=681&badge_type=daily"
+            width="270"
+            alt="Example Image"
+            class="d-inline-block mt-3 p-3 rounded img-fluid"
+        /></a>
+        <p>A machine learning library created by me</p>
+        <img
+          src="https://github.com/Okerew/okrolearn/assets/93822247/2c3e95ea-394d-4e29-8b97-13281ee695b7"
+        />
+        <br />
         <a href="https://github.com/Okerew/okrolearn/tree/main">Github</a>
-        <br>
+        <br />
       </div>
       <div class="animated-element" id="osxiec">
-        <h1>
-          Osxiec
-        </h1>
-        
-        <img src="https://github.com/user-attachments/assets/d45e77d8-9532-482f-b4f6-874a301f4916" witdh="500px" height="500px">
-        <br>
-      
-        <p>
-          OSXIEC is a native Docker-like solution for macOS developed by Okerew. It leverages native macOS features to provide containerization capabilities, albeit with some limitations compared to Docker.
-        </p>
-        <br>
-         <a href="https://fazier.com/launches/osxiec" target="_blank" rel="noopener noreferrer"><img src="https://fazier.com/api/v1/public/badges/embed_image.svg?launch_id=680&badge_type=daily" width="270" alt="Example Image" class="d-inline-block mt-3 p-3 rounded img-fluid" /></a>
-       <br>
-        <a href="https://github.com/Okerew/osxiec"> Github</a>
+        <h1>Osxiec</h1>
 
+        <img
+          src="https://github.com/user-attachments/assets/d45e77d8-9532-482f-b4f6-874a301f4916"
+          witdh="500px"
+          height="500px"
+        />
+        <br />
+
+        <p>
+          OSXIEC is a native Docker-like solution for macOS developed by Okerew.
+          It leverages native macOS features to provide containerization
+          capabilities, albeit with some limitations compared to Docker.
+        </p>
+        <br />
+        <a
+          href="https://fazier.com/launches/osxiec"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><img
+            src="https://fazier.com/api/v1/public/badges/embed_image.svg?launch_id=680&badge_type=daily"
+            width="270"
+            alt="Example Image"
+            class="d-inline-block mt-3 p-3 rounded img-fluid"
+        /></a>
+        <br />
+        <a href="https://github.com/Okerew/osxiec"> Github</a>
       </div>
       <div class="animated-element" id="biobridge">
-        <h1>
-          Biobridge
-        </h1>
-        <img src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/b54e8cf8-ba46-48b4-9f45-cc718b257f0e.image.png?v=1739306048194" width="500px" height="500px">
+        <h1>Biobridge</h1>
+        <img
+          src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/b54e8cf8-ba46-48b4-9f45-cc718b257f0e.image.png?v=1739306048194"
+          width="500px"
+          height="500px"
+        />
         <p>
-          Biobridge is a Python library for simulating biological processes and systems also analyzing them, visualising them, and interacting with them.
+          Biobridge is a Python library for simulating biological processes and
+          systems also analyzing them, visualising them, and interacting with
+          them.
         </p>
-        <p>
-          To install do pip install biobridge
-        </p>
+        <p>To install do pip install biobridge</p>
         <a href="https://github.com/Okerew/biobridge">Github</a>
       </div>
       <div class="animated-element" id="depramanager">
-       <h1>
-         Depramanager
-        </h1>
-        <img src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/icon.png?v=1739468743961" width="500px" height="500px">
+        <h1>Depramanager</h1>
+        <img
+          src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/icon.png?v=1739468743961"
+          width="500px"
+          height="500px"
+        />
         <p>
-          The Depramanager is a Visual Studio Code (VSCode) extension designed to help developers manage dependencies for various programming languages. It provides functionalities to analyze, sync, update, and install dependencies, ensuring that your project's dependencies are up-to-date and correctly declared. 
+          The Depramanager is a Visual Studio Code (VSCode) extension designed
+          to help developers manage dependencies for various programming
+          languages. It provides functionalities to analyze, sync, update, and
+          install dependencies, ensuring that your project's dependencies are
+          up-to-date and correctly declared.
         </p>
-        <a href="https://marketplace.visualstudio.com/items?itemName=Okerew.depramanger&ssr=false#overview">Marketplace</a>
+        <a
+          href="https://marketplace.visualstudio.com/items?itemName=Okerew.depramanger&ssr=false#overview"
+          >Marketplace</a
+        >
       </div>
       <p>These programms are for educational purposes only</p>
-      <p>Some of them fall under <a href="https://github.com/Okerew/okral-license/blob/main/LICENSE">okral license</a> and some under mit license</p>
       <p>
         Contact me, <a href="mailto:okerewgroup@proton.me">email</a>,
         <a href="https://discord.com/users/1130105085918191706">discord</a>
