--- a/index.html
+++ b/index.html
@@ -85,19 +85,18 @@
           <a href="https://github.com/Okerew/Neural-Web">Neural&nbsp;Web</a>
         </li>
         <li><a href="https://github.com/Okerew">Github</a></li>
-        <lli><a href="index2.html">Osxiec&nbsp;Hub</a></lli>
       </ul>
 
       <div id="autoclicker" class="animated-element">
         <h1>Okral Autoclicker 1.0</h1>
         <a
-          href="autoclicker.png"
+          href="Okral Autoclicker.zip"
           >Click to Dowloand</a
         >
         <br />
         <h1>How autoclicker Looks</h1>
         <img
-          src="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Zrzut%20ekranu%202022-09-03%20151405.png?v=1662210861177"
+          src="autoclicker.png"
         />
 
         <a
@@ -158,7 +157,7 @@
           model
         </h2>
         <a
-          href="https://cdn.glitch.global/a876511c-32af-4497-ae48-bc7d305558bb/Okral%20Stock%20Algorithm.zip?v=1707860237844"
+          href="Okral Stock Algorithm.zip"
           >Download</a
         >
       </div>
@@ -229,6 +228,8 @@
         /></a>
         <br />
         <a href="https://github.com/Okerew/osxiec"> Github</a>
+        |
+        <a href="index2.html">Osxiec&nbsp;Hub</a>
       </div>
       <div class="animated-element" id="biobridge">
         <h1>Biobridge</h1>
